--- a/Eigenanatomy1.Rnw
+++ b/Eigenanatomy1.Rnw
@@ -44,14 +44,14 @@ Next we do the eanat decomposition.
 ####################
 its<-3       # max iterations in optimization
 nvecs<-5     # components to split data into ...
-usp<-( -0.5 )# ICA style
+usp<-( -1 )# ICA style
 vsp<-0.1     # components occupy 10% of the mask
 ii<-0        # index for this study 
 cl<-150       # ignore small clusters 
 basedire<-paste(basedir,ii,'/',sep='')
 dir.create(file.path("./", basedire), showWarnings = FALSE)
 if ( ! exists('mydecom') )
-  mydecom<-sparseDecom( (mat), mask,  sparseness=vsp, nvecs=nvecs, its=its, cthresh=cl, statdir=basedire,smooth=0.5, z=usp)
+  mydecom<-sparseDecom( (mat), mask,  sparseness=vsp, nvecs=nvecs, its=its, cthresh=cl, statdir=basedire,smooth=0.0, z=usp)
 dx<-c(rep(0,ncon),rep(1,nmci))
 decom1<-mydecom$umatrix
 decom2<-imageListToMatrix( mydecom$eigenanatomyimages, mask)
@@ -94,6 +94,7 @@ for ( i in 1:ncol(myproj) )
   print( paste("p-value",i,pv[i]   ))
   }
 qv<-(p.adjust(pv,method='bonferroni'))
+print(qv)
 @ 
 
 
@@ -124,7 +125,7 @@ This is the visual and anatomical description of the most significant network.
 opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
 i<-mysig[1]
 mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, identifier = i )
+signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, identifier = "MidTemporal" )
 f<-mydecom$eigenanatomyimages[[ i ]]
 cnt<-getCentroids( f , clustparam = cl, threshparam = 0.5  )
 brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
@@ -146,7 +147,7 @@ The next most significant network.
 opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
 i<-mysig[2]
 mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, , identifier = i )
+signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, , identifier = "Parahippocampal" )
 f<-mydecom$eigenanatomyimages[[ i ]]
 cnt<-getCentroids( f , clustparam = cl, threshparam = 0.5  )
 brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
