--- a/Eigenanatomy1.Rnw
+++ b/Eigenanatomy1.Rnw
@@ -5,11 +5,14 @@
 <<setup, include=FALSE, cache=FALSE>>=
 options(xtable.comment = FALSE)
 options(replace.assign=TRUE,width=90)
-knit_hooks$set(rgl = hook_rgl)
-head(hook_rgl)  # the hook function is defined as this
+# knit_hooks$set(rgl = hook_rgl)
+# head(hook_rgl)  # the hook function is defined as this
 library(ANTsR)
 library(boot)
 library(xtable)
+library(grid)
+library(png)
+library(abind)
 @
 
 \title{Eigenanatomy of control and MCI cortical thickness}
@@ -44,7 +47,7 @@ Next we do the eanat decomposition.
 ####################
 its<-3       # max iterations in optimization
 nvecs<-5     # components to split data into ...
-usp<-( -1 )  # PCA style
+usp<-( -0.2 )  # ICA style
 vsp<-0.1     # components occupy 10% of the mask
 ii<-0        # index for this study 
 cl<-150       # ignore small clusters 
@@ -117,21 +120,29 @@ mysig<-which(  qv < 0.05 )
 brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 , smoothsval = 1.5  )
 id<-par3d("userMatrix")
 rid<-rotate3d( id , -pi/2, 1, 0, 0 )
-par3d(userMatrix = rid ) 
+rid2<-rotate3d( id , pi/2, 0, 0, 1 )
+rid3<-rotate3d( id , -pi/2, 0, 0, 1 )
+par3d(userMatrix = id ) 
 @
 
 This is the visual and anatomical description of the most significant network.
-<<describeit,rgl=TRUE,eval=TRUE,echo=TRUE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
+<<describeit,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
 opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
 i<-mysig[1]
 mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, identifier = "MidTemporal" )
+signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, identifier = "_Sig1" )
 f<-mydecom$eigenanatomyimages[[ i ]]
 cnt<-getCentroids( f , clustparam = cl, threshparam = 0.5  )
 brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
 plotBasicNetwork( centroids =  cnt$centroids , brain )
-rgl.snapshot( paste('network',i,'.png',sep='') , fmt="png", top=TRUE )
+make3ViewPNG(  rid, id, rid2,  paste('figure/network',i,sep='') )
+par3d(userMatrix = id ) 
 @ 
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{figure/network\Sexpr{i}.png}
+  \caption{A significant network.}
+\end{figure}
 
 The anatomy of this component and Talairach coordinates.
 <<tableTest,results='asis',echo=FALSE>>=
@@ -154,18 +165,25 @@ image( cor( clustmat ) > 0.75 )
 @
 
 
-The next most significant network.
-<<describeit2,rgl=TRUE,eval=TRUE,echo=TRUE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
+Now let's look at the next significant network.
+<<describeit2,rgl=FALSE,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
 opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
 i<-mysig[2]
 mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, , identifier = "Parahippocampal" )
+signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, , identifier = "_Sig2" )
 f<-mydecom$eigenanatomyimages[[ i ]]
 cnt<-getCentroids( f , clustparam = cl, threshparam = 0.5  )
 brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
 plotBasicNetwork( centroids =  cnt$centroids , brain )
-rgl.snapshot( paste('network',i,'.png',sep='') , fmt="png", top=TRUE )
+make3ViewPNG(  rid, id, rid2,  paste('figure/network',i,sep='') )
+par3d(userMatrix = id ) 
 @ 
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{figure/network\Sexpr{i}.png}
+  \caption{The 2nd significant network.}
+\end{figure}
+
 
 The anatomy of this component and Talairach coordinates.
 <<tableTest2,results='asis',echo=FALSE>>=
