--- a/Eigenanatomy1.Rnw
+++ b/Eigenanatomy1.Rnw
@@ -5,6 +5,7 @@
 <<setup, include=FALSE, cache=FALSE>>=
 options(xtable.comment = FALSE)
 options(replace.assign=TRUE,width=90)
+options( digits = 4 )
 # knit_hooks$set(rgl = hook_rgl)
 # head(hook_rgl)  # the hook function is defined as this
 library(ANTsR)
@@ -219,20 +220,20 @@ for ( i in mysig[2:4] )
  \begin{figure}[h]
   \centering
     \includegraphics[width=1.0\textwidth]{figure/network2.png}
-  \caption{The 2nd significant network.}
+  \caption{The 2nd significant network with $q$ \Sexpr{qv[mysig[2]]}.}
 \end{figure}
 
  
 \begin{figure}[h]
   \centering
     \includegraphics[width=1.0\textwidth]{figure/network3.png}
-  \caption{The 3rd significant network.}
+  \caption{The 3rd significant network with $q$ \Sexpr{qv[mysig[3]]}.}
 \end{figure}
 
 \begin{figure}[h]
   \centering
     \includegraphics[width=1.0\textwidth]{figure/network4.png}
-  \caption{The 4th significant network.}
+  \caption{The 4th significant network with $q$ \Sexpr{qv[mysig[4]]}.}
 \end{figure}
 
 
