--- a/Eigenanatomy1.Rnw
+++ b/Eigenanatomy1.Rnw
@@ -199,7 +199,7 @@ dev.off()
 
 
 Now let's look at the rest of the significant networks.
-<<describeit2,rgl=FALSE,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
+<<describeit2,rgl=FALSE,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
 opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
 ct<-2
 for ( i in mysig[2:4] )
@@ -239,7 +239,10 @@ for ( i in mysig[2:4] )
 
 
 The anatomy of this component and Talairach coordinates.
-<<tableTest2,results='asis',echo=FALSE>>=
+<<tableTest2,results='asis',echo=FALSE,warning=FALSE,message=FALSE>>=
+i<-mysig[2]
+mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
+signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl,  identifier = "_Sig2", outprefix="./Z" )
 ntwkd<-signifnetworkdescriptor$networks[,c(1,2,3,4,7,8,9)]
 test <- data.frame( ntwkd )
 print(xtable(test))
