--- a/Eigenanatomy1.Rnw
+++ b/Eigenanatomy1.Rnw
@@ -1,259 +1,1 @@
-\documentclass{article}
-\usepackage{geometry}
-\usepackage{url}
-\begin{document}
-<<setup, include=FALSE, cache=FALSE>>=
-options(xtable.comment = FALSE)
-options(replace.assign=TRUE,width=90)
-options( digits = 4 )
-# knit_hooks$set(rgl = hook_rgl)
-# head(hook_rgl)  # the hook function is defined as this
-library(ANTsR)
-library(boot)
-library(xtable)
-library(grid)
-library(png)
-library(abind)
-library(grDevices)
-@
-
-\title{Eigenanatomy of control and MCI cortical thickness}
-\author{Brian Beaumont Avants}
-\maketitle
-
-ANTsR illustration of eigenanatomy (eanat) in a p-value and a prediction study.  We also illustrate visualization and descriptive statistics with eanat.
-
-
-
-\section{Read in data}
-
-We read in the population data, template, mask, etc.
-
-<<readdata>>=
-tem<-antsImageRead('data/template_brain.nii.gz',3)
-bm<-antsImageRead('data/brain_mask.nii.gz',3)
-mask <- getMask("data/maskgb.nii.gz")
-mat <- as.matrix( antsImageRead( 'data/thicknesspt25.mha' ,2 ) )
-subjin<-read.csv('data/subjid.csv')[1:nrow(mat),]
-ncon<-48
-nmci<-nrow(mat)-ncon
-dx<-c(rep(0,ncon),rep(1,nmci))
-basedir<-'eanat_processing'
-@
-
-\section{Reduce dimensionality}
-
-Next we do the eanat decomposition.
-
-<<eigenanatomy>>=
-
-####################
-its<-8              # max iterations in optimization
-nvecs<-10      # components to split data into ...
-usp<-( -0.5 )   # ICA style
-vsp<-0.1        # components occupy 10% of the mask
-ii<-0               # index for this study 
-cl<-0              # ignore small clusters 
-basedire<-paste(basedir,ii,'/',sep='')
-dir.create(file.path("./", basedire), showWarnings = FALSE)
-if ( ! exists('mydecom') )
-  mydecom<-sparseDecom( (mat), mask,  sparseness=vsp, nvecs=nvecs, its=its, cthresh=cl, statdir=basedire,smooth=0.0, z=usp)
-decom1<-mydecom$umatrix
-decom2<-imageListToMatrix( mydecom$eigenanatomyimages, mask)
-myproj<-mat %*% t( decom2 )
-colnames(myproj)<-paste("V",1:ncol(myproj),sep='')
-@ 
-
-
-
-
-\section{Eanat prediction}
-
-Use the components to cross-validate a prediction model.
-
-<<prediction>>=
-
-####################################################
-# use the networks in prediction                   #
-####################################################
-subb<-myproj[,c(1:5)]
-subj<-data.frame( cbind(subjin,dx,subb) )
-myform<-paste("dx~",paste(colnames(subb),collapse='+'))
-mdl<-glm( as.formula(myform), data=subj, family="binomial")
-dd<-0
-for ( i in 1:100 ) dd<-dd+cv.glm(subj, mdl,K=10)$delta[1]*0.01
-print(paste("prediction % misclassification" , dd * 100 ) )
-@ 
-
-\section{Eanat morphometry}
-
-Use the components in a simple group comparison.
-
-<<pvalue>>=
-####################################################
-###     perform a t-test on the networks                                    ###
-####################################################
-pv<-rep(NA, ncol(myproj) ) 
-for ( i in 1:ncol(myproj) )
-  {
-  pv[i]<-t.test( myproj[1:ncon,i],myproj[(ncon+1):nrow(myproj),i] )$p.value
-  print( paste("p-value",i,pv[i]   ))
-  }
-qv<-(p.adjust(pv,method='bonferroni'))
-print(qv)
-@ 
-
-
-
-\section{Eanat interpretation}
-
-Describe the components in terms of traditional coordinates. Also render the results. 
-
-<<figsetup,eval=TRUE,echo=TRUE,results='hide',warning=FALSE,message=FALSE, echo=FALSE>>=
-####################################################
-# describe the significant networks                #
-####################################################
-if ( ! exists("mymni") ) {
-  mymni<-list( antsImageRead(getANTsRData('mni'),3), 
-            antsImageRead(getANTsRData('mnib'),3), 
-            antsImageRead(getANTsRData('mnia'),3) )
-  }
-
-mysig<-order(qv)
-brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 , smoothsval = 1.5  )
-id<-par3d("userMatrix")
-rid<-rotate3d( id , -pi/2, 1, 0, 0 )
-rid2<-rotate3d( id , pi/2, 0, 0, 1 )
-rid3<-rotate3d( id , -pi/2, 0, 0, 1 )
-par3d(userMatrix = id ) 
-@
-
-This is the visual and anatomical description of the most significant network.
-<<describeit,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE, echo=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
-opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
-i<-mysig[1]
-mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-if ( cl < 100 ) cl <- 100
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl, identifier = "_Sig1", outprefix="./Z" )
-f<-mydecom$eigenanatomyimages[[ i ]]
-cnt<-getCentroids( f, clustparam = cl, threshparam = 0.5 )
-brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
-plotBasicNetwork( centroids =  cnt$centroids , brain )
-make3ViewPNG(  rid, id, rid2,  paste('figure/network1',sep='') )
-par3d(userMatrix = id ) 
-@ 
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=1.0\textwidth]{figure/network1.png}
-  \caption{A significant network.}
-\end{figure}
-
-The anatomy of this component and Talairach coordinates.
-<<tableTest,results='asis',echo=FALSE>>=
-ntwkd<-signifnetworkdescriptor$networks[,c(1,2,3,4,7,8,9)]
-test <- data.frame( ntwkd )
-print(xtable(test))
-@
-
-The decomposition extracts regions that covary.  So, let's look at the anatomical correlations within this network.  
-
-<<netcorr,results='hide',echo=FALSE,warning=FALSE,message=FALSE>>=
-nnodes<-nrow( cnt$centroids )
-clustimgs<-image2ClusterImages( cnt$clustimg , minThresh =1, maxThresh = nnodes )
-clustmat<-imageListToMatrix( clustimgs, mask )
-means<-apply(clustmat,MARGIN=1,FUN=mean)
-clustmat<-clustmat/means
-clustmat<-mat %*% t(clustmat)
-colnames(clustmat)<-test$AAL[2:length(test$AAL)]
-library(pheatmap)
-png('figure/within_network_correlation.png')
-pheatmap( cor( clustmat ) ,symm=T )
-dev.off()
-@
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=0.95\textwidth]{figure/within_network_correlation.png}
-  \caption{Correlation between values at the nodes of the most significant network.}
-\end{figure}
-
-
-How do the individual networks vary across the whole population?
-
-<<spider,results='hide',echo=FALSE,warning=FALSE,message=FALSE>>=
-row.names(clustmat)<-subjin
-con_avg<-apply( clustmat[1:ncon,],MARGIN=2,FUN=mean)
-mci_avg<-apply( clustmat[(ncon+1):nrow(myproj),],MARGIN=2,FUN=mean)
-clustmat<-rbind( clustmat, con_avg)
-clustmat<-rbind( clustmat, mci_avg)
-pdf('figure/spider.pdf')
-stars( clustmat,main = "Network Thickness: Control vs MCI", flip.labels = FALSE, radius = TRUE, key.loc=c(20,1) )
-# stars(clustmat, len = 0.6, key.loc = c(20,2), main = "Network Thickness: Control vs MCI", draw.segments = TRUE,   frame.plot = TRUE,  flip.labels = FALSE, cex = .7)
-dev.off()
-@
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=0.95\textwidth]{figure/spider.pdf}
-  \caption{{\bf Spider plots:} We show the thickness at each node of the network in every individual as well as the average for the controls and MCI subjects.}
-\end{figure}
-
-
-
-Now let's look at the rest of the significant networks.
-<<describeit2,rgl=FALSE,eval=TRUE,echo=FALSE,results='hide',warning=FALSE,message=FALSE,dev='png', fig.width=4, fig.height=4, out.width='.5\\linewidth'>>=
-opts_chunk$set(fig.path='figure/Eigenanatomy1-', fig.align='center', fig.show='asis',fig.keep='all')
-ct<-2
-for ( i in mysig[2:4] )
-  {
-  mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-  signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl,  identifier = "_Sig2", outprefix="./Z" )
-  f<-mydecom$eigenanatomyimages[[ i ]]
-  cnt<-getCentroids( f , clustparam = cl, threshparam = 0.5  )
-  brain<-renderSurfaceFunction( surfimg =list( bm ) , alphasurf=0.1 ,smoothsval = 1.5 , smoothfval = 1.0, funcimg=list(cnt$clustimg) , alphafunc=0.2 )
-  plotBasicNetwork( centroids =  cnt$centroids , brain )
-  par3d(userMatrix = id ) 
-  make3ViewPNG(  rid, id, rid2,  paste('figure/network',ct,sep='') )
-  par3d(userMatrix = id ) 
-  ct<-ct+1
-  }
- @
- 
- \begin{figure}[h]
-  \centering
-    \includegraphics[width=1.0\textwidth]{figure/network2.png}
-  \caption{The 2nd significant network with $q$ \Sexpr{qv[mysig[2]]}.}
-\end{figure}
-
- 
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=1.0\textwidth]{figure/network3.png}
-  \caption{The 3rd significant network with $q$ \Sexpr{qv[mysig[3]]}.}
-\end{figure}
-
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=1.0\textwidth]{figure/network4.png}
-  \caption{The 4th significant network with $q$ \Sexpr{qv[mysig[4]]}.}
-\end{figure}
-
-
-
-The anatomy of this component and Talairach coordinates.
-<<tableTest2,results='asis',echo=FALSE,warning=FALSE,message=FALSE>>=
-i<-mysig[2]
-mytem<-lappend( list(tem), mydecom$eigenanatomyimages[[ i ]] )
-signifnetworkdescriptor<-getMultivariateTemplateCoordinates(  mytem, mymni , convertToTal = TRUE , pvals = pv[ i ] , threshparam = 0.5, clustparam = cl,  identifier = "_Sig2", outprefix="./Z" )
-ntwkd<-signifnetworkdescriptor$networks[,c(1,2,3,4,7,8,9)]
-test <- data.frame( ntwkd )
-print(xtable(test))
-@
-
-Now we are done.  The results are: 
-\begin{enumerate}
-\item An anatomically interpretable decomposition.
-\item Its use in a prediction study for mild MCI---results are comparable to state of the art methods.
-\item Application to standard morphometry to reveal network level differences in cortical thickness patterns.
-\end{enumerate}
-Enjoy! 
-
-\end{document}
+Eigenanatomy1.txt
